--- a/app/templates/sg.html
+++ b/app/templates/sg.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="container-fluid" style="margin-top: 10px">
-    <h2><img src="/static/img/aws/sg.png"> Amazon Security Groups</h2>
+    <h2><img src="/static/img/aws/sg.png"> Amazon Security Groups</h2> <h3>{{ sg[0].name }} </h3>
     <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="info">
     <thead>
         <tr>
