--- a/app/templates/sgaudit.html
+++ b/app/templates/sgaudit.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container-fluid" style="margin-top: 10px">
     <h2><img src="/static/img/aws/sg.png"> Amazon Security Group Audit Report</h2>
-    <font color=red><b>The tables below list security groups which have allow rules for IP addresses not included in the known_ips configuration. These should either be added to the known_ips configuration or the rules should be purged.</font></b>
+    <b>The tables below list security groups which have allow rules for IP addresses not included in the IP Whitelist located in the Admin section. These IP address should be added to the whitelist with a description if valid or removed through the Amazon console in the relevant account.</b>
     {% for group in report %}
         <h3>{{ group }}</h3>
         <table cellpadding="1" cellspacing="0" border="0" class="table table-striped table-bordered">
