Remove all hardcoded URLs from the codebase and replace with things like url_for and request.view_args. This allows the app to run from any path (e.g. /elastatus/) and not just from '/'.

--- a/app/templates/cloudwatch.html
+++ b/app/templates/cloudwatch.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="container-fluid" style="margin-top: 10px">
-    <h2><img src="/static/img/aws/cloudwatch.png"> AWS CloudWatch</h2>
+    <h2><img src="{{ url_for('static', filename='img/aws/cloudwatch.png') }}"> AWS CloudWatch</h2>
 
 {% endblock %}
