--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        
+
         <title>Elastatus Admin</title>
-        
-        <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
+
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
         <style type="text/css">
           body {
            padding-top: 60px;
@@ -13,13 +13,13 @@
         }
         </style>
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-        <link rel="stylesheet" type="text/css" href="/static/css/bootstrap-responsive.css">
-        <link rel="stylesheet" type="text/css" href="/static/css/DT_bootstrap.css">
-        <script type="text/javascript" charset="utf-8" language="javascript" src="/static/js/jquery.js"></script>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap-responsive.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/DT_bootstrap.css') }}">
+        <script type="text/javascript" charset="utf-8" language="javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
 
-        <script type="text/javascript" charset="utf-8" language="javascript" src="/static/js/bootstrap.min.js"></script>
-        <script type="text/javascript" charset="utf-8" language="javascript" src="/static/js/jquery.dataTables.js"></script>
-        <script type="text/javascript" charset="utf-8" language="javascript" src="/static/js/DT_bootstrap.js"></script>
+        <script type="text/javascript" charset="utf-8" language="javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+        <script type="text/javascript" charset="utf-8" language="javascript" src="{{ url_for('static', filename='js/jquery.dataTables.js') }}"></script>
+        <script type="text/javascript" charset="utf-8" language="javascript" src="{{ url_for('static', filename='js/DT_bootstrap.js') }}"></script>
 
     </head>
     <body>
@@ -32,11 +32,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="/">Elastatus</a>
+          <a class="brand" href="{{ url_for('elastatus.index') }}">Elastatus</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="/admin"><i class="icon-wrench icon-white"></i> Admin</a></li>
-              <li><a href="/">Home <i class="icon-arrow-left icon-white"></i></a></li>
+              <li class="active"><a href="{{ url_for('.index') }}"><i class="icon-wrench icon-white"></i> Admin</a></li>
+              <li><a href="{{ url_for('elastatus.index') }}">Home <i class="icon-arrow-left icon-white"></i></a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -47,6 +47,3 @@
 
   </body>
 </html>
-
-
-       
