--- a/app/templates/asg.html
+++ b/app/templates/asg.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="container-fluid" style="margin-top: 10px">
-    <h2><img src="/static/img/aws/autoscaling.png"> EC2 Autoscaling Groups</h2>
+    <h2><img src="{{ url_for('static', filename='img/aws/autoscaling.png') }}"> EC2 Autoscaling Groups</h2>
 
     <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="info">
     <thead>
