--- a/app/templates/cloudformation.html
+++ b/app/templates/cloudformation.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="container-fluid" style="margin-top: 10px">
-    <h2><img src="/static/img/aws/cloudformation.png"> AWS CloudFormation</h2>
+    <h2><img src="{{ url_for('static', filename='img/aws/cloudformation.png') }}"> AWS CloudFormation</h2>
     <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="info">
     <thead>
         <tr>
@@ -19,17 +19,16 @@
             <td>{{ s.stack_name}}</td>
             <td>{{ s.creation_time.strftime('%Y-%m-%d %H:%M:%S') }}</td>
             <td>{{ s.stack_status }}</a></td>
-            <td>{{ s.describe_events()[0].timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</td>            
+            <td>{{ s.describe_events()[0].timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</td>
             <td>{% for r in s.describe_resources() %}
                 {{ r }}<br>
                 {% endfor %}
             </td>
             <td>
-              <a class="btn btn-info" type="button" href="/{{ current_account }}/{{ current_region }}/cloudformation/{{ s.stack_name }}.json"><i class="icon-download-alt icon-white"></i> Download Template</a>
+              <a class="btn btn-info" type="button" href="{{ url_for('.get_template', account=current_account, region=current_region, stack_name=s.stack_name)}}"><i class="icon-download-alt icon-white"></i> Download Template</a>
             </td>
         </tr>
         {% endfor %}
     </tbody>
     </table>
 {% endblock %}
-
