--- a/app/templates/ec2.html
+++ b/app/templates/ec2.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="container-fluid" style="margin-top: 10px">
-    <h2><img src="/static/img/aws/ec2.png"> Elastic Cloud Compute</h2>
+    <h2><img src="{{ url_for('static', filename='img/aws/ec2.png') }}"> Elastic Cloud Compute</h2>
 
     <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="info">
     <thead>
@@ -33,12 +33,12 @@
             </td>
             <td>{{ instance.placement }}</td>
             <td>{% for group in instance.groups %}
-                <a href="/{{current_account}}/{{current_region}}/sg/{{ group.id }}">{{ group.name }}</a><br>
+                <a href="{{ url_for('.sg', account=current_account, region=current_region, id=group.id) }}">{{ group.name }}</a><br>
             {% endfor %}</td>
             <td>{{ instance.state }}</td>
         </tr>
         {% endfor %}
     </tbody>
-    </table>      
+    </table>
 </div>
 {% endblock %}
