--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        
+
         <title>Elastatus</title>
-        
-        <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
+
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
         <style type="text/css">
           body {
            padding-top: 60px;
@@ -13,13 +13,13 @@
         }
         </style>
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-        <link rel="stylesheet" type="text/css" href="/static/css/bootstrap-responsive.css">
-        <link rel="stylesheet" type="text/css" href="/static/css/DT_bootstrap.css">
-        <script type="text/javascript" charset="utf-8" language="javascript" src="/static/js/jquery.js"></script>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap-responsive.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/DT_bootstrap.css') }}">
+        <script type="text/javascript" charset="utf-8" language="javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
 
-        <script type="text/javascript" charset="utf-8" language="javascript" src="/static/js/bootstrap.min.js"></script>
-        <script type="text/javascript" charset="utf-8" language="javascript" src="/static/js/jquery.dataTables.js"></script>
-        <script type="text/javascript" charset="utf-8" language="javascript" src="/static/js/DT_bootstrap.js"></script>
+        <script type="text/javascript" charset="utf-8" language="javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+        <script type="text/javascript" charset="utf-8" language="javascript" src="{{ url_for('static', filename='js/jquery.dataTables.js') }}"></script>
+        <script type="text/javascript" charset="utf-8" language="javascript" src="{{ url_for('static', filename='js/DT_bootstrap.js') }}"></script>
 
     </head>
     <body>
@@ -32,14 +32,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="/">Elastatus</a>
+          <a class="brand" href="{{ url_for('elastatus.index') }}">Elastatus</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="dropdown">
-                <a href="" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-tasks icon-white"></i> 
-                  {% set current_account = request.path.split('/')[1] %}
-                  {% set current_region = request.path.split('/')[2] %}
-                  {% set current_service = request.path.split('/')[3] %}
+                <a href="" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-tasks icon-white"></i>
+                  {% set current_account = request.view_args.get('account') %}
+                  {% set current_region = request.view_args.get('region') %}
+                  {% set current_service = request.url_rule.rule.split('/')[3] %}
                   {% if current_account == '' %}
                   Accounts
                   {% elif config['CONFIG']['accounts'].has_key(current_account) %}
@@ -50,22 +50,26 @@
                 <ul class="dropdown-menu">
                 {% for account in config['CONFIG']['accounts'] %}
                   {% if current_service == 'sg' %}
-                  <li><a href="/{{ current_account }}/ec2">{{ account.capitalize() }}</a></li>
+                  <li><a href="{{ url_for('elastatus.ec2', account=current_account, region=current_region) }}">{{ account.capitalize() }}</a></li>
                   {% else %}
-                  <li><a href="{{ request.path.replace(current_account, account) }}">{{ account.capitalize() }}</a></li>
+                  {% set args = request.view_args.copy() %}
+                  {% do args.update({'account': account}) %}
+                  <li><a href="{{ url_for('elastatus.'+current_service, **args) }}">{{ account.capitalize() }}</a></li>
                   {% endif %}
                 {% endfor %}
                 </ul>
               </li>
               <li class="dropdown">
-                <a href="" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-globe icon-white"></i> 
-                  {{ request.path.split('/')[2] }} <b class="caret"></b></a>
+                <a href="" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-globe icon-white"></i>
+                  {{ current_region }} <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                 {% for region in config['CONFIG']['regions'] %}
                   {% if current_service == 'sg' %}
-                  <li><a href="/{{ current_account }}/ec2">{{ region }}</a></li>
+                  <li><a href="{{ url_for('elastatus.ec2', account=current_account, region=current_region) }}">{{ region }}</a></li>
                   {% else %}
-                  <li><a href="{{ request.path.replace(current_region, region) }}">{{ region }}</a></li>
+                  {% set args = request.view_args.copy() %}
+                  {% do args.update({'region': region}) %}
+                  <li><a href="{{ url_for('elastatus.'+current_service, **args) }}">{{ region }}</a></li>
                   {% endif %}
                 {% endfor %}
                 </ul>
@@ -76,7 +80,7 @@
                   Compute<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                 {% for service in config['CONFIG']['aws']['compute'] %}
-                  <li><a href="/{{ current_account }}/{{current_region}}/{{ service }}">{{ service.upper() }}</a></li>
+                  <li><a href="{{ url_for('elastatus.'+service, account=current_account, region=current_region) }}">{{ service.upper() }}</a></li>
                 {% endfor %}
                 </ul>
               </li>
@@ -86,7 +90,7 @@
                   Database<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                 {% for service in config['CONFIG']['aws']['database'] %}
-                  <li><a href="/{{ current_account }}/{{current_region}}/{{ service }}">{{ service.upper() }}</a></li>
+                  <li><a href="{{ url_for('elastatus.'+service, account=current_account, region=current_region) }}">{{ service.upper() }}</a></li>
                 {% endfor %}
                 </ul>
               </li>
@@ -98,9 +102,9 @@
                 {% for service in config['CONFIG']['aws']['services'] %}
                   <li>
                     {% if service == "route53" %}
-                    <a href="/{{ config['CONFIG']['route53']['account'] }}/{{current_region}}/{{ service }}">{{ service.upper() }}</a></li>
+                    <a href="{{ url_for('elastatus.'+service, account=config['CONFIG']['route53']['account'], region=current_region) }}">{{ service.upper() }}</a></li>
                     {% else %}
-                    <a href="/{{ current_account }}/{{current_region}}/{{ service }}">{{ service.upper() }}</a></li>
+                    <a href="{{ url_for('elastatus.'+service, account=current_account, region=current_region) }}">{{ service.upper() }}</a></li>
                     {% endif %}
                 {% endfor %}
                 </ul>
@@ -111,17 +115,17 @@
                   Deployments<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                 {% for service in config['CONFIG']['aws']['deployments'] %}
-                  <li><a href="/{{ current_account }}/{{current_region}}/{{ service }}">{{ service.upper() }}</a></li>
+                  <li><a href="{{ url_for('elastatus.'+service, account=current_account, region=current_region) }}">{{ service.upper() }}</a></li>
                 {% endfor %}
                 </ul>
               </li>
 
-              {% if request.path.split('/')[1] == 'admin' %}
+              {% if request.blueprint == 'admin' %}
                 <li class="active">
               {% else %}
                 <li>
               {% endif %}
-              <a href="/admin"><i class="icon-wrench icon-white"></i> Admin</a>
+              <a href="{{ url_for('admin.index') }}"><i class="icon-wrench icon-white"></i> Admin</a>
             </li>
 
             </ul>
@@ -134,6 +138,3 @@
 
   </body>
 </html>
-
-
-       
