--- a/app/templates/r53.html
+++ b/app/templates/r53.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="container-fluid" style="margin-top: 10px">
-    <h2><img src="/static/img/aws/route53.png"> Amazon Route53</h2>
+    <h2><img src="{{ url_for('static', filename='img/aws/route53.png') }}"> Amazon Route53</h2>
     <h3>{{ domain }}</h3>
     <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="info">
     <thead>
