--- a/app/templates/rds.html
+++ b/app/templates/rds.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="container-fluid" style="margin-top: 10px">
-    <h2><img src="/static/img/aws/rds.png"> Relational Database Service</h2>
+    <h2><img src="{{ url_for('static', filename='img/aws/rds.png') }}"> Relational Database Service</h2>
     <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="info">
     <thead>
         <tr>
@@ -29,12 +29,12 @@
             <td>{{ db.multi_az }}</td>
             <td>{{ db.iops }}</td>
             <td>{% for group in db.vpc_security_groups %}
-                <a href="/{{current_account}}/{{current_region}}/sg/{{ group.vpc_group }}">{{ group.vpc_group }}</a><br>
+                <a href="{{ url_for('.sg', account=current_account, region=current_region, id=group.vpc_group) }}">{{ group.vpc_group }}</a><br>
             {% endfor %}</td>
             <td>{{ db.status }}</td>
         </tr>
         {% endfor %}
     </tbody>
-    </table>      
+    </table>
 </div>
 {% endblock %}
