--- a/app/templates/sg.html
+++ b/app/templates/sg.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="container-fluid" style="margin-top: 10px">
-    <h2><img src="/static/img/aws/sg.png"> Amazon Security Groups</h2> <h3>{{ sg[0].name }} </h3>
+    <h2><img src="{{ url_for('static', filename='img/aws/sg.png') }}"> Amazon Security Groups</h2> <h3>{{ sg[0].name }} </h3>
     <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="info">
     <thead>
         <tr>
@@ -17,7 +17,7 @@
                 <td>{{ rule.from_port }}</td>
                 <td>{{ rule.to_port }}</td>
                 {% if grant.cidr_ip == None %}
-                <td><a href="/{{ current_account }}/{{ region }}/sg/{{ grant.group_id }}">{{ grant.group_id }}</a></td>
+                <td><a href="{{ url_for('.sg', account=current_account, region=region, id=grant.group_id) }}">{{ grant.group_id }}</a></td>
                 {% else %}
                 <td>{{ grant }} ({{ grant.description }})</td>
                 {% endif %}
@@ -26,6 +26,6 @@
                 {% endfor %}
         {% endfor %}
     </tbody>
-    </table>      
+    </table>
 </div>
 {% endblock %}
